--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.372.0",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.5.1",
     "next-themes": "^0.3.0",
     "prisma": "^5.13.0",
@@ -32,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "react-phone-number-input": "^3.4.1",
     "react-select": "^5.8.0",
     "sweetalert2": "^11.10.8",
     "tailwind-merge": "^2.3.0",
